--- a/src/styles/ListItems.css
+++ b/src/styles/ListItems.css
@@ -8,9 +8,16 @@
     display: block;
     padding: 1rem 5rem;
     margin-bottom: 0.7rem;
-    border: 0.4rem solid #ccc;
     border-radius: 0.4rem;
     color: white;
+}
+
+.notebook-list li.red {
+    border: 0.4rem solid #791b1b;
+}
+
+.notebook-list li.green {
+    border: 0.4rem solid #315d18;
 }
 
 .notebook-list li label {
